--- a/what-for-you-cat-anatomy.html
+++ b/what-for-you-cat-anatomy.html
@@ -669,7 +669,7 @@
         </a>
     </li>
     <li>
-        <a data-href="./what-for-you-are-you-ready-cat-are-you-ready" href="./what-for-you-are-you-ready-cat-are-you-ready.html">
+        <a data-href="./what-for-you-are-you-ready-for-cat-are-you-ready" href="./what-for-you-are-you-ready-for-cat-are-you-ready.html">
             Въпросник: <span class="bold">Готов ли си</span> за котка?
         </a>
     </li>
@@ -811,12 +811,11 @@
                             температурата, предпазва от външни влияния и дори помага за сетивното възприятие. Котките се
                             грижат за козината си постоянно, като я почистват, което разпределя естествените масла,
                             които я поддържат мека и водоустойчива.</p>
-                        <p>&nbsp;</p>
-
+                            
                         <div class="other-article">
                             <a style="visibility: hidden;"></a>
 
-                            <a href="nature.html">
+                            <a href="./what-for-you-cat-nature.html">
                                 <div class="other-article-next">
                                     Следваща статия »
                                 </div>
