--- a/what-for-you-cat-perks.html
+++ b/what-for-you-cat-perks.html
@@ -669,7 +669,7 @@
         </a>
     </li>
     <li>
-        <a data-href="./what-for-you-are-you-ready-cat-are-you-ready" href="./what-for-you-are-you-ready-cat-are-you-ready.html">
+        <a data-href="./what-for-you-are-you-ready-for-cat-are-you-ready" href="./what-for-you-are-you-ready-for-cat-are-you-ready.html">
             Въпросник: <span class="bold">Готов ли си</span> за котка?
         </a>
     </li>
@@ -876,13 +876,13 @@
 
 
                         <div class="other-article">
-                            <a href="brief-history.html">
+                            <a href="./what-for-you-cat-brief-history.html">
                                 <div class="other-article-prev">
                                     « Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./..-are-you-ready-cat-are-you-ready.html">
+                            <a href="./what-for-you-are-you-ready-for-cat-are-you-ready.html">
                                 <div class="other-article-next">
                                     Следваща статия »
                                 </div>
