--- a/what-for-you-cat-where.html
+++ b/what-for-you-cat-where.html
@@ -669,7 +669,7 @@
         </a>
     </li>
     <li>
-        <a data-href="./what-for-you-are-you-ready-cat-are-you-ready" href="./what-for-you-are-you-ready-cat-are-you-ready.html">
+        <a data-href="./what-for-you-are-you-ready-for-cat-are-you-ready" href="./what-for-you-are-you-ready-for-cat-are-you-ready.html">
             Въпросник: <span class="bold">Готов ли си</span> за котка?
         </a>
     </li>
@@ -764,13 +764,13 @@
                             <p>Във всеки един случай, осиновяването на котка води до ново преживяване, изпълнено с любов и чувство на удовлетвореност.</p>
                                                         
                             <div class="other-article">
-                                <a href="male-or-female.html">
+                                <a href="./what-for-you-cat-male-or-female.html">
                                     <div class="other-article-prev">
                                         « Предходна статия:
                                     </div>
                                 </a>
 
-                                <a href="before.html.html">
+                                <a href="./what-for-you-cat-before.html.html">
                                     <div class="other-article-next">
                                         Следваща статия »
                                     </div>
