--- a/what-for-you-dog-nature.html
+++ b/what-for-you-dog-nature.html
@@ -764,13 +764,13 @@
                             удовлетворяваща връзка с вашия четириног приятел.</p>
 
                         <div class="other-article">
-                            <a href="anatomy.html">
+                            <a href="./what-for-you-dog-anatomy.html">
                                 <div class="other-article-prev">
                                     « Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="life-expectancy.html">
+                            <a href="./what-for-you-dog-life-expectancy.html">
                                 <div class="other-article-next">
                                     Следваща статия »
                                 </div>
