--- a/what-for-you-dog-perks.html
+++ b/what-for-you-dog-perks.html
@@ -855,13 +855,13 @@
                         <br>
 
                         <div class="other-article">
-                            <a href="life-expectancy.html">
+                            <a href="./what-for-you-dog-life-expectancy.html">
                                 <div class="other-article-prev">
                                     « Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="perks.html">
+                            <a href="./what-for-you-dog-perks.html">
                                 <div class="other-article-next">
                                     Следваща статия »
                                 </div>
