--- a/what-for-you-cat-before.html
+++ b/what-for-you-cat-before.html
@@ -669,7 +669,7 @@
         </a>
     </li>
     <li>
-        <a data-href="./what-for-you-are-you-ready-cat-are-you-ready" href="./what-for-you-are-you-ready-cat-are-you-ready.html">
+        <a data-href="./what-for-you-are-you-ready-for-cat-are-you-ready" href="./what-for-you-are-you-ready-for-cat-are-you-ready.html">
             Въпросник: <span class="bold">Готов ли си</span> за котка?
         </a>
     </li>
@@ -1668,13 +1668,13 @@
                     </table>
 
                     <div class="other-article">
-                        <a href="where.html">
+                        <a href="./what-for-you-cat-where.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="anatomy.html">
+                        <a href="./what-for-you-cat-anatomy.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
