--- a/what-for-you-cat-brief-history.html
+++ b/what-for-you-cat-brief-history.html
@@ -669,7 +669,7 @@
         </a>
     </li>
     <li>
-        <a data-href="./what-for-you-are-you-ready-cat-are-you-ready" href="./what-for-you-are-you-ready-cat-are-you-ready.html">
+        <a data-href="./what-for-you-are-you-ready-for-cat-are-you-ready" href="./what-for-you-are-you-ready-for-cat-are-you-ready.html">
             Въпросник: <span class="bold">Готов ли си</span> за котка?
         </a>
     </li>
@@ -799,16 +799,15 @@
                         <p>Котките продължават да пленяват сърцата на милиони хора по света със своята грация и
                             мистериозна натура. Тяхната история показва колко сложна и взаимозависима е връзката им с
                             човечеството.</p>
-                        <p>&nbsp;</p>
 
                         <div class="other-article">
-                            <a href="life-expectancy.html">
+                            <a href="./what-for-you-cat-life-expectancy.html">
                                 <div class="other-article-prev">
                                     « Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="perks.html">
+                            <a href="./what-for-you-cat-perks.html">
                                 <div class="other-article-next">
                                     Следваща статия »
                                 </div>
