--- a/what-for-you-cat-male-or-female.html
+++ b/what-for-you-cat-male-or-female.html
@@ -669,7 +669,7 @@
         </a>
     </li>
     <li>
-        <a data-href="./what-for-you-are-you-ready-cat-are-you-ready" href="./what-for-you-are-you-ready-cat-are-you-ready.html">
+        <a data-href="./what-for-you-are-you-ready-for-cat-are-you-ready" href="./what-for-you-are-you-ready-for-cat-are-you-ready.html">
             Въпросник: <span class="bold">Готов ли си</span> за котка?
         </a>
     </li>
@@ -769,15 +769,14 @@
                             ключът е да намерите котка, която да съответства на Вашия начин на живот и предпочитания за
                             личност.</p>
 
-                        <p>&nbsp;</p>
                         <div class="other-article">
-                            <a href="./young-or-adult.html">
+                            <a href="./what-for-you-cat-young-or-adult.html">
                                 <div class="other-article-prev">
                                     « Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="before.html">
+                            <a href="./what-for-you-cat-before.html">
                                 <div class="other-article-next">
                                     Следваща статия »
                                 </div>
