--- a/what-for-you-cat-nature.html
+++ b/what-for-you-cat-nature.html
@@ -669,7 +669,7 @@
         </a>
     </li>
     <li>
-        <a data-href="./what-for-you-are-you-ready-cat-are-you-ready" href="./what-for-you-are-you-ready-cat-are-you-ready.html">
+        <a data-href="./what-for-you-are-you-ready-for-cat-are-you-ready" href="./what-for-you-are-you-ready-for-cat-are-you-ready.html">
             Въпросник: <span class="bold">Готов ли си</span> за котка?
         </a>
     </li>
@@ -805,16 +805,15 @@
                                 тялото, за да изразяват емоции. Например, изправена опашка означава дружелюбна и уверена
                                 котка, докато мятаща се опашка сигнализира досада.</li>
                         </ul>
-                        <p>&nbsp;</p>
 
                         <div class="other-article">
-                            <a href="anatomy.html">
+                            <a href="./what-for-you-cat-anatomy.html">
                                 <div class="other-article-prev">
                                     « Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="life-expectancy.html">
+                            <a href="./what-for-you-cat-life-expectancy.html">
                                 <div class="other-article-next">
                                     Следваща статия »
                                 </div>
