--- a/what-for-you-cat-young-or-adult.html
+++ b/what-for-you-cat-young-or-adult.html
@@ -669,7 +669,7 @@
         </a>
     </li>
     <li>
-        <a data-href="./what-for-you-are-you-ready-cat-are-you-ready" href="./what-for-you-are-you-ready-cat-are-you-ready.html">
+        <a data-href="./what-for-you-are-you-ready-for-cat-are-you-ready" href="./what-for-you-are-you-ready-for-cat-are-you-ready.html">
             Въпросник: <span class="bold">Готов ли си</span> за котка?
         </a>
     </li>
@@ -872,13 +872,13 @@
                         </ol>
 
                         <div class="other-article">
-                            <a href="../breeds-cat-breeds.html">
+                            <a href="./what-for-you-are-you-ready-for-cat-are-you-ready.html">
                                 <div class="other-article-prev">
                                     « Предходна статия:
                                 </div>
                             </a>
 
-                            <a href="./male-or-female.html">
+                            <a href="./what-for-you-cat-male-or-female.html">
                                 <div class="other-article-next">
                                     Следваща статия »
                                 </div>
