Fixed audio in Cat Language article

--- a/src/health-care/cat/deworming.html
+++ b/src/health-care/cat/deworming.html
@@ -639,7 +639,7 @@
                                     хранене</span>, направо в устата, като съдържанието се впръсква в основата на езика
                                 или <span class="orange">се смесва с храната</span>.</div>
                             <div class="italic"><span class="bold italic">Линк за повече информация</span>: <a
-                                    href="../../css/pdfs/panacur.pdf">тук</a></div>
+                                    href="./css/pdfs/panacur.pdf">тук</a></div>
                             <img src="./img/health-care/deworming-med/panacur-pet-paste-tablitsa.png"
                                 class="img300x500">
                             <img src="./img/health-care/deworming-med/panacur-pet-paste-tablitsa-2.png"
