--- a/src/how-take-care/cat/language.html
+++ b/src/how-take-care/cat/language.html
@@ -8,6 +8,7 @@
     <span class="breadcrumb-link">  &#x27A4;  </span>
     <a class="breadcrumb-link no-dec" href="./how-take-care/cat/language.html">Как общуват?</a>
 </include>
+<link rel="stylesheet" href="./language.css">
 
 <section id="content-section">
 
@@ -36,7 +37,7 @@
                     <h3>Котешки репертоар за отблъскване</h3>
                     <div class="audio">
                         <audio controls>
-                            <source src="./css/audio/how-take-care/cat-growling.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-growling.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Ръмжене</strong> (growling) &ndash; Представлява тихо заплашително хриптене, чрез
                             който коткатапредупреждава околните да не се приближават. Това е знак за раздразнение или
@@ -45,7 +46,7 @@
 
                     <div class="audio">
                         <audio controls>
-                            <source src="./css/audio/how-take-care/cat-hissing.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-hissing.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Съскане</strong> (hissing) &ndash; Звук, наподобяващ този на змия, чрез който котката
                             предупреждава потенциалните си нападатели да стоят далеч.</p>
@@ -54,7 +55,7 @@
 
                     <div class="audio">
                         <audio controls>
-                            <source src="./css/audio/how-take-care/cat-spitting.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-spitting.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Плюене</strong> (spitting) &ndash; По-силно изразено предупреждение от съскането,
                             което често е придружено от защитна стойка.</p>
@@ -62,7 +63,7 @@
 
                     <div class="audio">
                         <audio controls>
-                            <source src="./css/audio/how-take-care/cat-shrieking.wav" type="audio/wav">
+                            <source src="./css/how-take-care/cat-shrieking.wav" type="audio/wav">
                         </audio>
                         <p><strong>Пищене</strong> (shrieking) &ndash; Остър и силен звук, използван като последно
                             предупреждение към потенциалните заплахи.</p>
@@ -70,7 +71,7 @@
 
                     <div class="audio">
                         <audio controls>
-                            <source src="./css/audio/how-take-care/cat-squeaking.wav" type="audio/wav">
+                            <source src="./css/how-take-care/cat-squeaking.wav" type="audio/wav">
                         </audio>
                         <p><strong>Писукане</strong> (squeaking) &ndash; Кратък и нежен звук, с който котката изразява
                             нужда от внимание или храна.</p>
@@ -78,7 +79,7 @@
                     </div>
                     <div class="audio">
                         <audio controls>
-                            <source src="./css/audio/how-take-care/cat-chattering.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-chattering.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Потракване със зъби</strong> (chattering) &ndash; Обикновено се проявява при вълнение
                             или разочарование, например когато котката наблюдава плячка, която не може да достигне.</p>
@@ -87,7 +88,7 @@
                     <h3>Котешки репертоар за привличане</h3>
                     <div class="audio">
                         <audio controls>
-                            <source src="./css/audio/how-take-care/cat-meowing.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-meowing.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Мяукане</strong> (meowing) &ndash; Основният начин, по който котката се опитва да
                             привлече вниманието на човека.</p>
@@ -95,7 +96,7 @@
                     </div>
                     <div class="audio">
                         <audio controls>
-                            <source src="./css/audio/how-take-care/cat-mewing.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-mewing.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Слабо мяукане</strong> (mewing) &ndash; Обичайно за малките котенца, когато искат
                             внимание от майката.</p>
@@ -103,7 +104,7 @@
                     </div>
                     <div class="audio">
                         <audio controls>
-                            <source src="./css/audio/how-take-care/cat-moaning.wav" type="audio/wav">
+                            <source src="./css/how-take-care/cat-moaning.wav" type="audio/wav">
                         </audio>
                         <p><strong>Виене</strong> (moaning) &ndash; Звук, който показва силна нужда от внимание или
                             дискомфорт.</p>
@@ -111,7 +112,7 @@
                     </div>
                     <div class="audio">
                         <audio controls>
-                            <source src="./css/audio/how-take-care/cat-trilling.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-trilling.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Вибриращ звук</strong> (trilling) &ndash; Високочестотен звук, използван за
                             комуникация със стопанина, обикновено за да изрази ентусиазъм или привързаност.</p>
