--- a/health-care-dog-deworming.html
+++ b/health-care-dog-deworming.html
@@ -1540,7 +1540,7 @@
                                                     <span class="orange">се смесва с храната</span>.
                                                 </div>
                                                 <div class=""><span class="bold ">Линк за повече информация</span>:
-                                                    <a href="../..-css-pdfs-panacur.pdf">тук</a>
+                                                    <a href="./css-pdfs-panacur.pdf">тук</a>
                                                 </div>
                                                 <img src="./img/health-care/deworming-med/panacur-pet-paste-tablitsa.png" class="img300x500">
                                                 <img src="./img/health-care/deworming-med/panacur-pet-paste-tablitsa-2.png" class="img300x500">
