--- a/how-take-care-cat-language.html
+++ b/how-take-care-cat-language.html
@@ -632,6 +632,7 @@
         </div>
     </div>
 </header>
+<link rel="stylesheet" href="./language.css">
 
 <section id="content-section">
 
@@ -706,7 +707,7 @@
                     <h3>Котешки репертоар за отблъскване</h3>
                     <div class="audio">
                         <audio controls="">
-                            <source src="./css/audio/how-take-care/cat-growling.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-growling.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Ръмжене</strong> (growling) – Представлява тихо заплашително хриптене, чрез
                             който коткатапредупреждава околните да не се приближават. Това е знак за раздразнение или
@@ -715,7 +716,7 @@
 
                     <div class="audio">
                         <audio controls="">
-                            <source src="./css/audio/how-take-care/cat-hissing.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-hissing.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Съскане</strong> (hissing) – Звук, наподобяващ този на змия, чрез който котката
                             предупреждава потенциалните си нападатели да стоят далеч.</p>
@@ -724,7 +725,7 @@
 
                     <div class="audio">
                         <audio controls="">
-                            <source src="./css/audio/how-take-care/cat-spitting.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-spitting.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Плюене</strong> (spitting) – По-силно изразено предупреждение от съскането,
                             което често е придружено от защитна стойка.</p>
@@ -732,7 +733,7 @@
 
                     <div class="audio">
                         <audio controls="">
-                            <source src="./css/audio/how-take-care/cat-shrieking.wav" type="audio/wav">
+                            <source src="./css/how-take-care/cat-shrieking.wav" type="audio/wav">
                         </audio>
                         <p><strong>Пищене</strong> (shrieking) – Остър и силен звук, използван като последно
                             предупреждение към потенциалните заплахи.</p>
@@ -740,7 +741,7 @@
 
                     <div class="audio">
                         <audio controls="">
-                            <source src="./css/audio/how-take-care/cat-squeaking.wav" type="audio/wav">
+                            <source src="./css/how-take-care/cat-squeaking.wav" type="audio/wav">
                         </audio>
                         <p><strong>Писукане</strong> (squeaking) – Кратък и нежен звук, с който котката изразява
                             нужда от внимание или храна.</p>
@@ -748,7 +749,7 @@
                     </div>
                     <div class="audio">
                         <audio controls="">
-                            <source src="./css/audio/how-take-care/cat-chattering.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-chattering.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Потракване със зъби</strong> (chattering) – Обикновено се проявява при вълнение
                             или разочарование, например когато котката наблюдава плячка, която не може да достигне.</p>
@@ -757,7 +758,7 @@
                     <h3>Котешки репертоар за привличане</h3>
                     <div class="audio">
                         <audio controls="">
-                            <source src="./css/audio/how-take-care/cat-meowing.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-meowing.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Мяукане</strong> (meowing) – Основният начин, по който котката се опитва да
                             привлече вниманието на човека.</p>
@@ -765,7 +766,7 @@
                     </div>
                     <div class="audio">
                         <audio controls="">
-                            <source src="./css/audio/how-take-care/cat-mewing.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-mewing.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Слабо мяукане</strong> (mewing) – Обичайно за малките котенца, когато искат
                             внимание от майката.</p>
@@ -773,7 +774,7 @@
                     </div>
                     <div class="audio">
                         <audio controls="">
-                            <source src="./css/audio/how-take-care/cat-moaning.wav" type="audio/wav">
+                            <source src="./css/how-take-care/cat-moaning.wav" type="audio/wav">
                         </audio>
                         <p><strong>Виене</strong> (moaning) – Звук, който показва силна нужда от внимание или
                             дискомфорт.</p>
@@ -781,7 +782,7 @@
                     </div>
                     <div class="audio">
                         <audio controls="">
-                            <source src="./css/audio/how-take-care/cat-trilling.mp3" type="audio/mpeg">
+                            <source src="./css/how-take-care/cat-trilling.mp3" type="audio/mpeg">
                         </audio>
                         <p><strong>Вибриращ звук</strong> (trilling) – Високочестотен звук, използван за
                             комуникация със стопанина, обикновено за да изрази ентусиазъм или привързаност.</p>
