--- a/health-care-cat-deworming.html
+++ b/health-care-cat-deworming.html
@@ -1282,7 +1282,7 @@
                                 котенца, котки, малки кученца и кучета. Прилага се <span class="red">след
                                     хранене</span>, направо в устата, като съдържанието се впръсква в основата на езика
                                 или <span class="orange">се смесва с храната</span>.</div>
-                            <div class="italic"><span class="bold italic">Линк за повече информация</span>: <a href="../..-css-pdfs-panacur.pdf">тук</a></div>
+                            <div class="italic"><span class="bold italic">Линк за повече информация</span>: <a href="./css-pdfs-panacur.pdf">тук</a></div>
                             <img src="./img/health-care/deworming-med/panacur-pet-paste-tablitsa.png" class="img300x500">
                             <img src="./img/health-care/deworming-med/panacur-pet-paste-tablitsa-2.png" class="img300x500">
                             <p></p>
