Facebook, Share buttons

--- a/src/growth/cat/breeding.html
+++ b/src/growth/cat/breeding.html
@@ -36,8 +36,8 @@
                         служи за обездвижване на женската и намаляване на риска тя да се отдръпне по време на
                         чифтосването.</p>
                     <div class="img-holder">
-                        <img src="../@img/growth/cat-mating.png">
-                        <p>Пенисът на котарака е покрит с малки шипове.</p>
+                        <img src="../img/growth/cat-mating.png">
+                        <p>Типичната котешка поза за чифтосване.</p>
                     </div>
                     <br>
                     <h2>Как се случва процесът на чифтосване?</h2>
