--- a/src/what-for-you/breeds/dog-breed-selector.html
+++ b/src/what-for-you/breeds/dog-breed-selector.html
@@ -705,7 +705,7 @@
                 </div>
 
                 <div class="footer-box">
-                    <a href="https://forms.gle/569fgGe7XFVF1Pso6" class="no-dec">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSdGH0BTGhhP1n98iilZEWoEmDpRQY37dKDPN7ItzAEJer9sQw/viewform?usp=preview" class="no-dec">
                         <img src="./img/footer-question.png" class="footer-icon">
                         <div class="footer-icon-text">Задай въпрос</div>
                     </a>
