--- a/@layout/footer-dog.html
+++ b/@layout/footer-dog.html
@@ -33,7 +33,7 @@
                     </div>
 
                     <div class="footer-box">
-                        <a href="https://forms.gle/569fgGe7XFVF1Pso6" class="no-dec">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdGH0BTGhhP1n98iilZEWoEmDpRQY37dKDPN7ItzAEJer9sQw/viewform?usp=preview" class="no-dec">
                             <img src="./img/footer-question.png" class="footer-icon">
                             <div class="footer-icon-text">Задай въпрос</div>
                         </a>
@@ -86,5 +86,6 @@
         <script src="./script.js"></script>
 
         <script src="./are-you-ready.js"></script>
+
     </body>
 </html>
