--- a/@layout/share.html
+++ b/@layout/share.html
@@ -6,9 +6,16 @@
             <div class="share-text">Сподели във Фейсбук</div>
         </div>
         
-        <div id="shareMessengerBtn" class="share-box">
+        <!-- <div id="shareMessengerBtn" class="share-box">
             <img src="./img/Facebook_Messenger_logo.png" class="share-icon">
             <div class="share-text">Сподели в Месинджър</div>
+        </div> -->
+
+        <div id="shareMessengerBtn" class="share-box">
+            <a href="https://www.instagram.com/mutsunaorg/" class="no-dec" target="_blank">
+                <img src="./img/instagram_logo.png" class="share-icon">
+                <div class="share-text">Инстаграм</div>
+            </a>
         </div>
 
         <div id="sendByEmail" onclick="sendByEmail()" class="share-box">
