Fixed some links, changed messenger btn to facebook btn, share section

--- a/src/growth/cat/pet-years.html
+++ b/src/growth/cat/pet-years.html
@@ -102,8 +102,8 @@
                             <br>
                             Точно сега ще трябва и да помислите дали искате да кастрирате вашето коте. (Виж: <a href="./growth-cat-castration.html">Кастрация</a>).
                             <br>
-                            През този етап от живота котките се обезпаразитяват и ваксинират. (Виж: <a href="./growth-cat-deworming.html">Обезпаразитяване</a>,
-                            <a href="./growth-cat-vaccination.html">Ваксиниране</a>). Поради градящия се в момента имунитет, бъдете бдителни за появата на
+                            През този етап от живота котките се обезпаразитяват и ваксинират. (Виж: <a href="./health-care-cat-deworming.html">Обезпаразитяване</a>,
+                            <a href="./health-care-cat-vaccination.html">Ваксиниране</a>). Поради градящия се в момента имунитет, бъдете бдителни за появата на
                             инфекциозни заболявания. *Виж: <a href="./diseases-cat-top-diseases.html">Заболявания“</a>
                             <br>
                             Бъдете гъвкави, защото до достигане на зрялост се налага следене на теглото и хранене по
