Wrong code imgs diseases

--- a/src/diseases/musculoskeletal/panosteitis.html
+++ b/src/diseases/musculoskeletal/panosteitis.html
@@ -20,7 +20,7 @@
                     <h2>Какво е паностеит и какво го причинява?</h2>
                     <p>Паностеитът, често наричан "<strong>болки на растежа</strong>" <em>(англ.: Growing pains),</em> е болезнено костно заболяване, което засяга млади, растящи кучета. То причинява възпаление на <strong>дългите кости</strong> на краката, водещо до <strong>куцота</strong>. Точната причина не е напълно изяснена, но се смята, че е свързана с бърз растеж, генетика и небалансирана диета.</p>
                     <div class="img-holder">
-                        <img src="../@img/diseases/musculoskeletal/panosteitis.png">
+                        <img src="./@img/diseases/musculoskeletal/panosteitis.png">
                     </div>
 
                     <h2>Кои животни са най-застрашени?</h2>
