--- a/diseases-infectious-feline-coronavirus-infection.html
+++ b/diseases-infectious-feline-coronavirus-infection.html
@@ -707,7 +707,7 @@
                             затруднено дишане</li>
                     </ul>
                     <div class="img-holder">
-                        <img src="../@img/diseases/infectious/panleukopenia2.png">
+                        <img src="./@img/diseases/infectious/panleukopenia2.png">
                     </div>
 
                     <h2>Как се диагностицира котешката коронавирусна инфекция?</h2>
