--- a/src/diseases/infectious/canine-coronavirus-infection.html
+++ b/src/diseases/infectious/canine-coronavirus-infection.html
@@ -101,15 +101,15 @@
                                                 
                         <br>
                         <div class="other-article">
-                            <a href="./canine-parvovirus-infection.html">
+                            <a href="./diseases-canine-parvovirus-infection.html">
                                 <div class="other-article-prev">
-                                    &laquo; Предходна статия:
+                                    &laquo; Предходна болест:
                                 </div>
                             </a>
 
-                            <a href="./canine-distemper.html">
+                            <a href="./diseases-rabies.html">
                                 <div class="other-article-next">
-                                    Следваща статия &raquo;
+                                    Следваща болест &raquo;
                                 </div>
                             </a>
                         </div>
