--- a/diseases-infectious-canine-coronavirus-infection.html
+++ b/diseases-infectious-canine-coronavirus-infection.html
@@ -754,15 +754,15 @@
                                                 
                         <br>
                         <div class="other-article">
-                            <a href="./canine-parvovirus-infection.html">
+                            <a href="./diseases-canine-parvovirus-infection.html">
                                 <div class="other-article-prev">
-                                    « Предходна статия:
+                                    « Предходна болест:
                                 </div>
                             </a>
 
-                            <a href="./canine-distemper.html">
+                            <a href="./diseases-rabies.html">
                                 <div class="other-article-next">
-                                    Следваща статия »
+                                    Следваща болест »
                                 </div>
                             </a>
                         </div>
