--- a/diseases-infectious-feline-panleukopenia.html
+++ b/diseases-infectious-feline-panleukopenia.html
@@ -820,13 +820,13 @@
 
                     <br>
                     <div class="other-article">
-                        <a href="../rabies.html">
+                        <a href="./diseases-rabies.html">
                             <div class="other-article-prev">
                                 « Предходна статия:
                             </div>
                         </a>
 
-                        <a href="./feline-coronavirus-infection.html">
+                        <a href="./diseases-feline-coronavirus-infection.html">
                             <div class="other-article-next">
                                 Следваща статия »
                             </div>
