--- a/@layout/header.html
+++ b/@layout/header.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="CUyrudPG3hhNckXtwoLpTaaPyyLRSI3Be_YnANvpNxE" />
     <title>Муцуна | {{{title}}}</title>
     <link rel="icon" href="./img/mutsuna-logo-round-nose-DARK.png">
     <link rel="stylesheet" href="./calculator-compare-foods.css" />
