--- a/src/diseases/infectious/feline-panleukopenia.html
+++ b/src/diseases/infectious/feline-panleukopenia.html
@@ -41,7 +41,7 @@
                         <li>Обувки и дрехи</li>
                     </ul>
                     <div class="img-holder">
-                        <img src="./@img/diseases/infectious/panleukopenia.png">
+                        <img src="./img/diseases/infectious/panleukopenia.png">
                     </div>
 
                     <p>При <strong>бременните котки</strong> вирусът на панлевкопенията може да премине през плацентата
@@ -89,7 +89,7 @@
                         <li>Чернодробна недостатъчност</li>
                     </ul>
                     <div class="img-holder">
-                        <img src="./@img/diseases/infectious/panleukopenia2.png">
+                        <img src="./img/diseases/infectious/panleukopenia2.png">
                     </div>
 
                     <h2>Как се диагностицира панлевкопенията?</h2>
@@ -150,7 +150,7 @@
                             едномесечна възраст.</li>
                     </ol>
                     <div class="img-holder">
-                        <img src="./@img/diseases/infectious/panleukopenia3.png">
+                        <img src="./img/diseases/infectious/panleukopenia3.png">
                     </div>
 
                     <h2>Какво да направите, ако подозирате панлевкопения?</h2>
