--- a/diseases-genitourinary-flutd.html
+++ b/diseases-genitourinary-flutd.html
@@ -682,7 +682,7 @@
                         <li>частична или пълна обструкция на уретрата</li>
                     </ol>
                     <div class="img-holder">
-                        <img src="./@img/diseases/genitourinary/flutd.png">
+                        <img src="./img/diseases/genitourinary/flutd.png">
                     </div>
 
                     <p>ЗДУП може да бъде причинено от:</p>
@@ -727,7 +727,7 @@
                         <li>Пълно запушване на уретрата може да доведе до <strong>невъзможност за уриниране</strong>, което изисква спешна ветеринарна помощ</li>
                     </ul>
                     <div class="img-holder">
-                        <img src="./@img/diseases/genitourinary/flutd2.png">
+                        <img src="./img/diseases/genitourinary/flutd2.png">
                     </div>
                     
                     <h2>Как се диагностицира ЗДУП?</h2>
