--- a/diseases-infectious-feline-panleukopenia.html
+++ b/diseases-infectious-feline-panleukopenia.html
@@ -696,7 +696,7 @@
                         <li>Обувки и дрехи</li>
                     </ul>
                     <div class="img-holder">
-                        <img src="./@img/diseases/infectious/panleukopenia.png">
+                        <img src="./img/diseases/infectious/panleukopenia.png">
                     </div>
 
                     <p>При <strong>бременните котки</strong> вирусът на панлевкопенията може да премине през плацентата
@@ -744,7 +744,7 @@
                         <li>Чернодробна недостатъчност</li>
                     </ul>
                     <div class="img-holder">
-                        <img src="./@img/diseases/infectious/panleukopenia2.png">
+                        <img src="./img/diseases/infectious/panleukopenia2.png">
                     </div>
 
                     <h2>Как се диагностицира панлевкопенията?</h2>
@@ -805,7 +805,7 @@
                             едномесечна възраст.</li>
                     </ol>
                     <div class="img-holder">
-                        <img src="./@img/diseases/infectious/panleukopenia3.png">
+                        <img src="./img/diseases/infectious/panleukopenia3.png">
                     </div>
 
                     <h2>Какво да направите, ако подозирате панлевкопения?</h2>
