Created Disease Toxoplasmosis

--- a/src/diseases/cat/all-diseases.html
+++ b/src/diseases/cat/all-diseases.html
@@ -34,6 +34,7 @@
                         <p><a href="./diseases-infectious-feline-infectious-peritonitis.html">Котешки инфекциозен перитонит</a></p>
                         <p><a href="./diseases-infectious-feline-leukemia-virus-infection.html">Котешка левкемия</a></p>
                         <p><a href="./diseases-infectious-feline-immunodeficiency-virus.html">Котешки имунодефицитен синдром</a></p>
+                        <p><a href="./diseases-infectious-toxoplasmosis.html">Токсоплазмоза</a></p>
 
                         <h2>Паразитни заболявания</h2>
                         <p><a href="./diseases-parasitic-tapeworms.html">Цестодоза (Тении)</a></p>
